# refractiveindex.info-adapters

./: .gitmodules  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
misc/: cherry-initial-data.txt
src/: lib.rs  main.rs
src/catalog/: mod.rs
src/cli/: mod.rs
src/database/: catalog.rs  material.rs  mod.rs  parsers.rs  readers.rs
src/inputs/: mod.rs
src/internal/: mod.rs  parsers.rs  readers.rs  store.rs
tests/: cli_integration.rs
