[package]
name = "ria"
version = "0.1.0"
edition = "2021"
authors = ["Kyle M. Douglass <kyle.m.douglass@gmail.com>"]
repository = "https://github.com/kmdouglass/refractiveindex.info-adapters"

[lib]
name = "lib_ria"
src = "src/lib.rs"

[[bin]]
name = "ria"
src = "src/main.rs"

[dependencies]
clap = { version = "4.5.3", features = ["derive"] }
heck = { version = "0.5.0-rc.1" }
