[package]
name = "ria"
description = "An adapter for converting the RefractiveIndex.INFO database into a flat, key-value store."
version = "0.2.0"
edition = "2021"
authors = ["Kyle M. Douglass <kyle.m.douglass@gmail.com>"]
repository = "https://github.com/kmdouglass/refractiveindex.info-adapters"
readme = "README.md"
license-file = "LICENSE"
exclude = [ "refractiveindex.info-database/" ]

[lib]
name = "lib_ria"
src = "src/lib.rs"

[[bin]]
name = "ria"
src = "src/main.rs"

[dependencies]
anyhow = "1.0"
bitcode = { version = "0.6", features = ["serde"] }
clap = { version = "4.5.3", features = ["derive"] }
heck = { version = "0.5.0-rc.1" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
