[package]
name = "ria"
description = "An adapter for converting the RefractiveIndex.INFO database into a flat, key-value store."
version = "0.2.0"
edition = "2021"
authors = ["Kyle M. Douglass <kyle.m.douglass@gmail.com>"]
repository = "https://github.com/kmdouglass/refractiveindex.info-adapters"
readme = "README.md"
license-file = "LICENSE"
exclude = [ "refractiveindex.info-database/" ]

[lib]
name = "lib_ria"
src = "src/lib.rs"

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }

bitcode = { version = "0.6", features = ["serde"], optional = true }
clap = { version = "4.5.3", features = ["derive"], optional = true }
heck = { version = "0.5.0-rc.1", optional = true }
serde_json = { version = "1.0", optional = true }
serde_yaml = { version = "0.9", optional = true }

[dev-dependencies]
approx = { version = "0.5" }

[features]
cli = [ "dep:bitcode", "dep:clap", "dep:heck", "dep:serde_json", "dep:serde_yaml" ]

[[bin]]
name = "ria"
src = "src/main.rs"
required-features = ["cli"]
